# memoryhole

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  README.md  sources.yaml
.github/workflows/: ci.yml  daily.yml
data/derived/: health.json  site.json
data/derived/edits/: 023141ecda884463-a729ffea-4d84c595.json  023141ecda884463-ac01f810-a729ffea.json  027f718e3f59adfd-5defac00-2ff94427.json  027f718e3f59adfd-7df7a0ec-5defac00.json  0327f7aed29a8ef0-4bac5537-99ec1b00.json  0327f7aed29a8ef0-99ec1b00-f4192145.json  0327f7aed29a8ef0-f4192145-4bac5537.json  0327f7aed29a8ef0-f4192145-99ec1b00.json  035dd65ae88e9d70-afd4cee7-e79e15b8.json  040a1160ff5611d6-1c84c5fa-bd66e3d0.json  064b86ea421a16ab-0e8a114a-ecbf1265.json  064b86ea421a16ab-877f97b8-0e8a114a.json  06b2086ac96b19a9-322f4634-b68bc010.json  070f0d79d47c3877-60a82aa8-a84280b0.json  070f0d79d47c3877-8e3068f8-a84280b0.json  070f0d79d47c3877-a84280b0-60a82aa8.json  0785583564ed914e-ba3346cf-7d7c6474.json  07ed030492571bc5-9a705259-f0c7674e.json  082c65d8a552eec2-0ce19105-6bf0a2de.json  (+450 more)
data/snapshots/: index.json
pipeline/: pyproject.toml
pipeline/memoryhole/: __init__.py  classify.py  cli.py  config.py  diffing.py  extract.py  fetch.py  publish.py  store.py
pipeline/tests/: conftest.py  test_classify.py  test_config.py  test_diff.py  test_extract.py  test_idempotency.py
pipeline/tests/fixtures/: article_v1.html  article_v1_churn.html  article_v2_number.html  article_v3_paradel.html
site/: astro.config.mjs  package-lock.json  package.json
site/public/: filters.js
(+928 files in other folders)
