[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoryhole"
version = "1.0.0"
description = "Detects silent edits in published web content"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
    "trafilatura>=1.8",
    "readability-lxml>=0.8",
    "PyYAML>=6.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=2.7"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
memoryhole = "memoryhole.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
